[package]
name = "chipotle8"
version = "0.1.0"
authors = ["Melvillian <melvillevt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
fixedbitset = "0.2.0"
minifb = "0.15.3"
slog = "2.5.2"
sloggers = "0.3.5"