[package]
name = "chipotle8"
version = "0.1.0"
authors = ["Melvillian <melvillevt@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
slog = "2.5.2"
sloggers = "0.3.5"
serde = { version = "1.0.105", features = ["derive"] }

[dev-dependencies]
minifb = "0.15.3"
device_query = "0.2.3"
rusty-hook = "^0.10.3"
